--- a/Builds/VisualStudio2010/open-ephys.vcxproj
+++ b/Builds/VisualStudio2010/open-ephys.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="..\..\Source\Dsp\RootFinder.cpp"/>
     <ClCompile Include="..\..\Source\Dsp\State.cpp"/>
     <ClCompile Include="..\..\Source\Audio\AudioComponent.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\PulsePalOutput.cpp"/>
     <ClCompile Include="..\..\Source\Processors\ReferenceNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\PhaseDetector.cpp"/>
     <ClCompile Include="..\..\Source\Processors\AudioResamplingNode.cpp"/>
@@ -171,6 +172,7 @@
     <ClCompile Include="..\..\Source\Processors\SpikeDetector.cpp"/>
     <ClCompile Include="..\..\Source\Processors\AudioNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\EventNode.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\Editors\PulsePalOutputEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\RHD2000Editor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\RecordControlEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\ReferenceNodeEditor.cpp"/>
@@ -1321,6 +1323,7 @@
     <ClInclude Include="..\..\Source\Dsp\Types.h"/>
     <ClInclude Include="..\..\Source\Dsp\Utilities.h"/>
     <ClInclude Include="..\..\Source\Audio\AudioComponent.h"/>
+    <ClInclude Include="..\..\Source\Processors\PulsePalOutput.h"/>
     <ClInclude Include="..\..\Source\Processors\ReferenceNode.h"/>
     <ClInclude Include="..\..\Source\Processors\PhaseDetector.h"/>
     <ClInclude Include="..\..\Source\Processors\AudioResamplingNode.h"/>
@@ -1347,6 +1350,7 @@
     <ClInclude Include="..\..\Source\Processors\SpikeDetector.h"/>
     <ClInclude Include="..\..\Source\Processors\AudioNode.h"/>
     <ClInclude Include="..\..\Source\Processors\EventNode.h"/>
+    <ClInclude Include="..\..\Source\Processors\Editors\PulsePalOutputEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\RHD2000Editor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\RecordControlEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\ReferenceNodeEditor.h"/>
