--- a/Builds/VisualStudio2012/resources.rc
+++ b/Builds/VisualStudio2012/resources.rc
@@ -7,16 +7,17 @@
 #include <windows.h>
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION  0,0,0,0
+FILEVERSION  0,1,0,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
     BLOCK "040904E4"
     BEGIN
+      VALUE "CompanyName",  "Open Ephys\0"
       VALUE "FileDescription",  "open-ephys\0"
-      VALUE "FileVersion",  "0.0.0\0"
+      VALUE "FileVersion",  "0.1.0\0"
       VALUE "ProductName",  "open-ephys\0"
-      VALUE "ProductVersion",  "0.0.0\0"
+      VALUE "ProductVersion",  "0.1.0\0"
     END
   END
 
